--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-    background-color: #ffffff;
+    background-color: #f6f7d8;
 }
 
 
@@ -24,7 +24,7 @@ section {
 
 
 .nav-link {
-    color: #CB6D43;
+    color: #e7bfac;
     font-weight: 600;
 }
 
