--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 :root {
     --laranja-claro: #ffea2ac4;
     --alto-contraste-fundo: #c8eeec;
-    --alto-contraste-texto: #ffffff;
+    --alto-contraste-texto: #f6f7d8;
     --alto-contraste-link: #00ffd5cc;
 }
 
