--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 :root {
     --laranja-claro: #ffea2ac4;
     --alto-contraste-fundo: #c8eeec;
-    --alto-contraste-texto: #f6f7d8;
+    --alto-contraste-texto: #f8f8f8;
     --alto-contraste-link: #00ffd5cc;
 }
 
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-    background-color: #f6f7d8;
+    background-color:rgb(255, 255, 255);
 }
 
 
