--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ section {
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url(img/2.png);
+    background-image: url(Captura\ de\ tela_VERMELHO);
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
