--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ section {
 .inicio-fundo {
     /* aula 3 */
     background-image: url(Captura\ de\ tela_VERMELHO);
-    /* Substitua pelo caminho da sua imagem */
+    /* Tela vermelha */
     background-size: cover;
     background-position: right;
     border-radius: 40px;
