--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 
 :root {
     --laranja-claro: #dbcf25;
-    --alto-contraste-fundo: #000000;
+    --alto-contraste-fundo: #f8bf05;
     --alto-contraste-texto: #f8f8f8;
     --alto-contraste-link: #000000fd;
 }
